WIP recreate board with pre-existing css rules

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,12 @@
   box-shadow: 5px 5px 5px gray;
 }
 
+.winning-message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .board {
   display: grid;
   justify-content: center;
@@ -39,20 +45,15 @@
   grid-template-columns: repeat(3, auto);
   text-align: center;
 }
-.winning-message {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
-button {
+/* button {
   font-size: 25px;
   align-self: center;
   margin-top: 50px;
   box-shadow: 5px 5px 5px gray;
   background-color: white;
   border: 2px solid;
-}
+} */
 
 .cell {
   width: var(--cell-size);
@@ -90,7 +91,3 @@ button {
 I refered to this video https://www.youtube.com/watch?v=Y-GkMjUZsmM&t=751s
 for the CSS. 
 */
-
-.test {
-  border: solid 2px red;
-}
