larger x/o font, expanded win message

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .container {
   display: flex;
-  flex-flow: column;
+  flex-flow: column wrap;
 }
 
 #game-status {
@@ -30,30 +30,21 @@
   box-shadow: 5px 5px 5px gray;
 }
 
-.winning-message {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .board {
+  width: 100vw;
+  height: 50vw;
   display: grid;
   justify-content: center;
   align-content: center;
   justify-items: center;
   align-items: center;
   grid-template-columns: repeat(3, auto);
-  text-align: center;
 }
 
-/* button {
-  font-size: 25px;
-  align-self: center;
-  margin-top: 50px;
-  box-shadow: 5px 5px 5px gray;
-  background-color: white;
-  border: 2px solid;
-} */
+#board {
+  font-size: 70px;
+  text-align: center;
+}
 
 .cell {
   width: var(--cell-size);
